2A/05_Projet_GL/src/test/deca/syntax/invalid/Objet/10_UsePublicField.deca
// Description:
//    Programme declaration d'un champ de visibilité public en ecrivant le mots cles public
// Resultats:
//      Programme incorrecte syntaxiquement : 8:16: no viable alternative at input 'publicintx' , il reconnait public en temps que ident.
// Historique:
//    cree le 16/01/2023
class c {
    public int x;
}